--- a/ReadForBlind/Views/OutputPage.xaml
+++ b/ReadForBlind/Views/OutputPage.xaml
@@ -11,7 +11,7 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Landscape" Orientation="Landscape"
     mc:Ignorable="d"
-    shell:SystemTray.IsVisible="True" Tap="ScreenTap" DoubleTap="OpenVoiceCommand">
+    shell:SystemTray.IsVisible="True" Tap="ScreenTap" Hold="OpenVoiceCommand">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
